5.4-0
-----
Argument my.locations.file added to pop.predict to allow projections for other 
than the UN countries/regions. (thanks to Filippo Temporin)

Aggregations for ASFR and PASFR implemented.

Added PASFR to write.pop.projection.summary.

Added functions for extracting and plotting cohort data 
(functions cohorts, pop.cohorts.plot)

Added functions pop.trajectories and get.trajectory.indices.

5.3-4 (4/10/2015)
-----
Projecting age-specific mortality:
	- dealt with jump-off bias - different way of computing a_x (country specific)
	- implemented rotation of b_x (Li, Gerland 2013)
	- some countries use modeled b_x

Implemented projection of percent age-specific fertility rate (Kantorova 2014)

Added 'R' into expressions for obtaining percent age-specific fertility.

plot.by.age got a few additional graphical arguments.

5.2-2 (2/4/2015)
-----
Fix in litem function - made compatible with R-devel.

5.2-1 (11/12/2014)
-----
Assuring population age groups are not negative (adjusting migration).

Bug in computing deaths for observed data fixed.

5.2-0 (10/3/2014)
-----
Added an option of using projections of mx only, without calculating e0.

Fix in pop.pyramid - the argument pop.max now works.

5.1-5 (8/13/2014)
-----
Minor fixes.

5.1-1 (5/9/2014)
-----
Time points for population indicators changed to end of time periods instead of the middle year.

Allowing adjustments to wpp2012 (in output functions as well as in pop.aggregate)

5.0-0 (4/28/2014)
-----
Allows probabilistic migration: trajectories of net counts can be passed in an csv file to pop.predict
(no re-balancing implemented yet).

If keep.vital.events is TRUE, the migration trajectories are stored with all the other country-specific data
and can be accessed using the "G" expression.
 
Aggregation 'method's changed to 'input.type' in pop.aggregate. Default input types are now 
'country' (former independence method) and 'region' (former regional method). 